--- a/styles/architect.css
+++ b/styles/architect.css
@@ -26,3 +26,44 @@ nav li a{
     text-align: center;
     margin: 0 auto;
 }
+.btn-primary{
+    background: #FF900E;
+    border-radius: 8px;
+    padding: 20px 25px;
+    color: #FFF;
+    cursor: pointer;
+    border: 0;
+}
+.banner img{
+    margin-top: 30px;
+    width: 100%;
+}
+@media screen and (max-width: 576px) {
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+    
+}
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+.team-container{
+    display: flex;
+    align-items: center;
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px
+}
+.team-content{
+    padding-left: 70px;
+    padding-right: 70px;
+}
+.team-title{
+    font-size: 48px;
+}
