--- a/styles/architect.css
+++ b/styles/architect.css
@@ -38,15 +38,7 @@ nav li a{
     margin-top: 30px;
     width: 100%;
 }
-@media screen and (max-width: 576px) {
-    header{
-        padding: 20px;
-    }
-    nav{
-        flex-direction: column;
-    }
-    
-}
+
 main{
     max-width: 1440px;
     margin: 0 auto;
@@ -66,4 +58,74 @@ main{
 }
 .team-title{
     font-size: 48px;
+}
+.facts-card-container{
+    display: flex;
+    justify-content: space-around;
+}
+.facts-card-container .card{
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 40px 30px;
+}
+.sponsors{
+    text-align: center;
+}
+.sponsors-img-container{
+        margin-left: 100px;
+}
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+.features{
+    display: flex;
+    margin-top: 100px;
+    gap:100px;
+}
+.features-img img{
+    margin-left: 100px;
+}
+.features-content-title{
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+.ten-years{
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFFFFF;
+    width: 342px;
+    position: relative;
+    bottom: 50px;
+
+
+  }
+footer{
+    border-radius: 8px;
+background: #FFF4E7;
+width: auto;
+height: 100px;
+flex-shrink: 0;
+color: var(--Dark-02, #424242);
+text-align: center;
+font-family: Work Sans;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+padding: 40px 410px;
+}
+
+@media screen and (max-width: 576px) {
+    header{
+        padding: 20px;
+    }
+    nav, .team-container{
+        flex-direction: column;
+    }
+    .team-img-container{
+        grid-template-columns: 1fr;
+    }
+    
 }
